hosts/nandstorm/k8s/apps/mcp-gateway/traefik-middleware-basicauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mcpgateway-basicauth
  namespace: mcp-gateway
spec:
  basicAuth:
    secret: mcpgateway-basicauth
    removeHeader: true
